feat:
Added config for surefire plugin